core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: ${NAMESPACE}
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: "{\"Type\": \"redirect\", \"RedirectConfig\": { \"Protocol\": \"HTTPS\", \"Port\": \"443\", \"StatusCode\": \"HTTP_301\"}}"
    alb.ingress.kubernetes.io/listen-ports: "[{\"HTTPS\":443}]"
#    alb.ingress.kubernetes.io/certificate-arn: "${CERTIFICATE_ARN}"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    external-dns.alpha.kubernetes.io/hostname: "${BASEDOMAIN}"
spec:
  ingressClassName: alb
  rules:
    - host: "api.${BASEDOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/ws-query"
            backend:
              service:
                name: ws-service
                port:
                  number: 8000
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
    - host: "admin.api.${BASEDOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/ws-query"
            backend:
              service:
                name: ws-service
                port:
                  number: 8000
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway-admin-service
                port:
                  number: 80
